Added graphs, exam 2 done through 24 (2d graphing)

--- a/full-practice_2.html
+++ b/full-practice_2.html
@@ -587,7 +587,7 @@
                                 <p class="mb-2">which of the following statements is true?</p>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m20" id="m20a" value="A">
-                                    <label class="form-check-label" for="m20a">A. If \(r\) is greater than 2, then \(s\)
+                                    <label class="form-check-label" for="m20a">A. If \(r\) is greater than 1, then \(s\)
                                         is positive</label>
                                 </div>
                                 <div class="form-check">
@@ -614,7 +614,8 @@
                                 <p class="mb-2">which of the following statements is true?</p>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m21" id="m21a" value="A">
-                                    <label class="form-check-label" for="m21a">A. If \(u\) is greater than 1, then \(v\)
+                                    <label class="form-check-label" for="m21a">A. If \(u\) is greater than -5, then
+                                        \(v\)
                                         is positive</label>
                                 </div>
                                 <div class="form-check">
@@ -695,7 +696,8 @@
                                 <p class="mb-2">which of the following statements is true?</p>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m24" id="m24a" value="A">
-                                    <label class="form-check-label" for="m24a">A. If \(f\) is greater than 3, then \(g\)
+                                    <label class="form-check-label" for="m24a">A. If \(f\) is greater than -3, then
+                                        \(g\)
                                         is positive</label>
                                 </div>
                                 <div class="form-check">
@@ -2370,12 +2372,12 @@
             m18: "Hold \\(e\\) and \\(f\\) constant by choosing \\(e = 2\\) and \\(f = 10\\). The formula becomes \\(q = \\frac{2(10 - d)}{d}\\). Distrubute the 2 in the numerator and rewrite: \\(q = \\frac{20}{d} - \\frac{2d}{d}\\) = \\(q = \\frac{20}{d} - 2\\). (\\(\\frac{2d}{d} = 2\\) because \\(\\frac{d}{d} = 1\\)). Now compute two values. If \\(d = 2\\), then \\(q = \\frac{20}{2} - 2 = 8\\). If \\(d = 5\\), then \\(q = \\frac{20}{5} - 2 = 2\\). As \\(d\\) increases from 2 to 5, \\(q\\) decreases from 8 to 2. Therefore, as \\(d\\) increases, \\(q\\) decreases. Statement C is true.",
             m19: "This one is tricky! Remeber that exponents mean curved lines in graphs and pay close attention to the constraints of the problem: y is greater than z. Hold \\(z\\) constant by choosing \\(z = 1\\). The formula becomes \\(x = \\frac{y}{y^2 + 1}\\). Now compute two values. If \\(y = 2\\), then \\(x = \\frac{2}{5} = 0.4\\). If \\(y = 4\\), then \\(x = \\frac{4}{17} \\approx 0.235\\). As \\(y\\) increases from 2 to 4, the numerator increases slowly while the denominator increases much faster, causing the fraction to shrink. Therefore, as \\(y\\) increases, \\(x\\) decreases. Statement C is true. <br><br>Here is a graph of the problem with z set to 1, <strong>note that the x axis is the vertical axis and y is the horizontal axis</strong>. Since the problem states y is greater than z, and z is set to 1 in this graph, we look at what happens to x (the vertical axis) as y (the horizontal axis) increases after the value 1.<br><img src=\"assets/images/exam2-graph19.png\" alt=\"Graph for question 19\" style=\"max-width: 50%; margin-top: 10px;\">",
             // Math Section: 2D Graphing and Inequalities (Questions m20-m24)
-            m20: "Rewriting: s = 4r - 6. If r < 0, then s = 4r - 6 < -6, so s < 6. Therefore, if r is less than 0, then s is less than 6. (Note: If r > 2, then s > 2, so s is positive, but this is not the only true statement. If s > 10, then r > 4, so r is positive, not negative. If s < 2, then r < 2, not necessarily positive.)",
-            m21: "Rewriting: v = 3u + 9. If v < 0, then 3u + 9 < 0, so 3u < -9, which means u < -3. Since u < -3, we have u < 0. Therefore, if v is less than 0, then u is negative. (Note: If u > 1, then v > 12, so v is positive, but this is not the only true statement. If u < 2, then v < 15, not necessarily negative. If v > 3, then u > -2, not necessarily negative.)",
-            m22: "Rewriting: k = 6h + 12. If h > 2, then k = 6h + 12 > 6(2) + 12 = 24, so k > 24 > 0. Therefore, if h is greater than 2, then k is greater than 0. (Note: If h < -1, then k < 6, but k is not necessarily < -18. If k > 6, then h > -1, not necessarily negative. If k < 0, then h < -2, so h is negative, not positive.)",
-            m23: "Rewriting: w = 7t - 14. If w < -7, then 7t - 14 < -7, so 7t < 7, which means t < 1. Therefore, if w is less than -7, then t is less than 1. (Note: If t < 1, then w < -7, so w is negative, not positive. If t > 3, then w > 7, so w is positive, not negative. If w > 0, then t > 2, so t is positive, not negative.)",
-            m24: "Rewriting: g = 2f + 4. If f < -6, then g = 2f + 4 < 2(-6) + 4 = -12 + 4 = -8, so g < -8. Therefore, if f is less than -6, then g is less than -8. (Note: If f > 3, then g > 10, so g is positive, but this is not the only true statement. If g > 2, then f > -1, not necessarily negative. If g < 0, then f < -2, so f is negative, not positive.)",
-            // Math Section: Factoring (Questions m25-m30)
+            m20: "Rewrite the equation as \\(s = 4r - 6\\). If \\(r < 0\\), then \\(4r < 0\\), so \\(s = 4r - 6 < -6\\), which is less than 6. Therefore, if \\(r\\) is less than 0, then \\(s\\) is less than 6. Statement B is true.<br> Here is a graph of the problem, <strong>note that the s axis is the vertical axis and r is the horizontal axis</strong>. <br><img src=\"assets/images/exam2-graph20.png\" alt=\"Graph for question 20\" style=\"max-width: 50%; height: auto; max-height: 300px; margin-top: 10px;\">",
+            m21: "Rewrite the equation as \\(v = 3u + 9\\). If \\(v < 0\\), then \\(3u + 9 < 0\\), so \\(3u < -9\\) and \\(u < -3\\). Therefore, if \\(v\\) is less than 0, then \\(u\\) is negative. Statement D is true. <br> <img src=\"assets/images/exam2-graph21.png\" alt=\"Graph for question 21\" style=\"max-width: 50%; height: auto; max-height: 300px; margin-top: 10px;\">",
+            m22: "Rewrite the equation as \\(k = 6h + 12\\). If \\(h > 2\\), then \\(6h > 12\\), so \\(k > 24\\), which is greater than 0. Therefore, if \\(h\\) is greater than 2, then \\(k\\) is greater than 0. Statement A is true. <br> Use <a href=\"https://www.desmos.com/calculator\" target=\"_blank\">Desmos</a> to check your handmade graph of \\(k = 6h + 12\\).",
+            m23: "Rewrite the equation as \\(w = 7t - 14\\). If \\(w < -7\\), then \\(7t - 14 < -7\\), so \\(7t < 7\\) and \\(t < 1\\). Therefore, if \\(w\\) is less than -7, then \\(t\\) is less than 1. Statement C is true. Use <a href=\"https://www.desmos.com/calculator\" target=\"_blank\">Desmos</a> to check your handmade graph of \\(w = 7t - 14\\).",
+            m24: "Rewrite the equation as \\(g = 2f + 4\\). If \\(f < -6\\), then \\(2f < -12\\), so \\(g < -8\\). Therefore, if \\(f\\) is less than -6, then \\(g\\) is less than -8. Statement B is true. Use <a href=\"https://www.desmos.com/calculator\" target=\"_blank\">Desmos</a> to check your handmade graph of \\(g = 2f + 4\\).",
+
             m25: "Using FOIL: (7k - 3m)(k + 2m) = 7k(k) + 7k(2m) - 3m(k) - 3m(2m) = 7k² + 14km - 3km - 6m² = 7k² + 11km - 6m².",
             m26: "Using FOIL: (3r - 4s)(2r - s) = 3r(2r) + 3r(-s) - 4s(2r) - 4s(-s) = 6r² - 3rs - 8rs + 4s² = 6r² - 11rs + 4s².",
             m27: "Using FOIL: (5t - 2u)(t + 4u) = 5t(t) + 5t(4u) - 2u(t) - 2u(4u) = 5t² + 20tu - 2tu - 8u² = 5t² + 18tu - 8u².",
