full practice 2 math complete

--- a/full-practice_2.html
+++ b/full-practice_2.html
@@ -722,64 +722,64 @@
 
                             <!-- Question 25: Expanding factored expression -->
                             <div class="question mb-4" data-question="m25" data-correct="C">
-                                <p class="fw-bold">25. Expand: \((7k - 3m)(k + 2m)\)</p>
+                                <p class="fw-bold">25. Expand: \((7k - 3)(k + 2)\)</p>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m25" id="m25a" value="A">
-                                    <label class="form-check-label" for="m25a">A. \(7k^2 + 17km - 6m^2\)</label>
+                                    <label class="form-check-label" for="m25a">A. \(7k^2 + 17k - 6\)</label>
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m25" id="m25b" value="B">
-                                    <label class="form-check-label" for="m25b">B. \(7k^2 - 17km - 6m^2\)</label>
+                                    <label class="form-check-label" for="m25b">B. \(7k^2 - 17km + 5\)</label>
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m25" id="m25c" value="C">
-                                    <label class="form-check-label" for="m25c">C. \(7k^2 + 11km - 6m^2\)</label>
+                                    <label class="form-check-label" for="m25c">C. \(7k^2 + 11k - 6\)</label>
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m25" id="m25d" value="D">
-                                    <label class="form-check-label" for="m25d">D. \(7k^2 + 13km - 6m^2\)</label>
+                                    <label class="form-check-label" for="m25d">D. \(8k + 11k - 5\)</label>
                                 </div>
                             </div>
 
                             <!-- Question 26: Expanding factored expression -->
                             <div class="question mb-4" data-question="m26" data-correct="A">
-                                <p class="fw-bold">26. Expand: \((3r - 4s)(2r - s)\)</p>
+                                <p class="fw-bold">26. Expand: \((3r - 4)(2r - 2)\)</p>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m26" id="m26a" value="A">
-                                    <label class="form-check-label" for="m26a">A. \(6r^2 - 11rs + 4s^2\)</label>
+                                    <label class="form-check-label" for="m26a">A. \(6r^2 - 14r + 8\)</label>
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m26" id="m26b" value="B">
-                                    <label class="form-check-label" for="m26b">B. \(6r^2 - 5rs + 4s^2\)</label>
+                                    <label class="form-check-label" for="m26b">B. \(5r^2 - 14r - 8\)</label>
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m26" id="m26c" value="C">
-                                    <label class="form-check-label" for="m26c">C. \(6r^2 - 10rs + 4s^2\)</label>
+                                    <label class="form-check-label" for="m26c">C. \(6r^2 - 8r - 5r - 8\)</label>
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m26" id="m26d" value="D">
-                                    <label class="form-check-label" for="m26d">D. \(6r^2 + 11rs + 4s^2\)</label>
+                                    <label class="form-check-label" for="m26d">D. \(6r^2 + 8r + 8\)</label>
                                 </div>
                             </div>
 
                             <!-- Question 27: Expanding factored expression -->
                             <div class="question mb-4" data-question="m27" data-correct="B">
-                                <p class="fw-bold">27. Expand: \((5t - 2u)(t + 4u)\)</p>
+                                <p class="fw-bold">27. Expand: \((5t - 2u)(t + 4)\)</p>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m27" id="m27a" value="A">
-                                    <label class="form-check-label" for="m27a">A. \(5t^2 + 22tu - 8u^2\)</label>
+                                    <label class="form-check-label" for="m27a">A. \(5t^2 + 22tu - 4u^2\)</label>
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m27" id="m27b" value="B">
-                                    <label class="form-check-label" for="m27b">B. \(5t^2 + 18tu - 8u^2\)</label>
+                                    <label class="form-check-label" for="m27b">B. \(5t^2 -2tu + 20t - 8u\)</label>
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m27" id="m27c" value="C">
-                                    <label class="form-check-label" for="m27c">C. \(5t^2 - 18tu - 8u^2\)</label>
+                                    <label class="form-check-label" for="m27c">C. \(5t - 18tu - 8u^2\)</label>
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m27" id="m27d" value="D">
-                                    <label class="form-check-label" for="m27d">D. \(5t^2 + 20tu - 8u^2\)</label>
+                                    <label class="form-check-label" for="m27d">D. \(5t^2 + 2ut + 20t - 8u\)</label>
                                 </div>
                             </div>
 
@@ -805,23 +805,23 @@
                             </div>
 
                             <!-- Question 29: Expanding factored expression -->
-                            <div class="question mb-4" data-question="m29" data-correct="A">
-                                <p class="fw-bold">29. Expand: \((8c - d)(c + 6d)\)</p>
+                            <div class="question mb-4" data-question="m29" data-correct="C">
+                                <p class="fw-bold">29. Expand: \((8c - d)(c + e)\)</p>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m29" id="m29a" value="A">
-                                    <label class="form-check-label" for="m29a">A. \(8c^2 + 47cd - 6d^2\)</label>
+                                    <label class="form-check-label" for="m29a">A. \(8c^2 + 2ce + 8dc - de\)</label>
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m29" id="m29b" value="B">
-                                    <label class="form-check-label" for="m29b">B. \(8c^2 + 49cd - 6d^2\)</label>
+                                    <label class="form-check-label" for="m29b">B. \(8c - cd + 8ce - de\)</label>
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m29" id="m29c" value="C">
-                                    <label class="form-check-label" for="m29c">C. \(8c^2 - 47cd - 6d^2\)</label>
+                                    <label class="form-check-label" for="m29c">C. \(8c^2 - dc + 8ce - de\)</label>
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m29" id="m29d" value="D">
-                                    <label class="form-check-label" for="m29d">D. \(8c^2 + 48cd - 6d^2\)</label>
+                                    <label class="form-check-label" for="m29d">D. \(8c^2 + dc - 4ce + de\)</label>
                                 </div>
                             </div>
 
@@ -927,36 +927,8 @@
                             <div class="question mb-4" data-question="m33" data-correct="D">
                                 <p class="fw-bold">33. The following graph represents which equation?</p>
                                 <div class="mb-3" style="text-align: center;">
-                                    <svg width="200" height="200" viewBox="0 0 200 200"
-                                        style="border: 1px solid #ccc; background: #f9f9f9;">
-                                        <!-- Axes -->
-                                        <line x1="20" y1="180" x2="180" y2="180" stroke="#333" stroke-width="2"
-                                            marker-end="url(#arrowhead2)" />
-                                        <line x1="20" y1="180" x2="20" y2="20" stroke="#333" stroke-width="2"
-                                            marker-end="url(#arrowhead2)" />
-                                        <!-- Arrow markers -->
-                                        <defs>
-                                            <marker id="arrowhead2" markerWidth="10" markerHeight="10" refX="9" refY="3"
-                                                orient="auto">
-                                                <polygon points="0 0, 10 3, 0 6" fill="#333" />
-                                            </marker>
-                                        </defs>
-                                        <!-- Labels -->
-                                        <text x="185" y="185" fill="#333" font-size="12">x</text>
-                                        <text x="15" y="15" fill="#333" font-size="12">y</text>
-                                        <text x="15" y="185" fill="#333" font-size="10">0</text>
-                                        <!-- Line: y = x + 2, showing x from -2 to 2, y from 0 to 4 -->
-                                        <!-- Points: (-2,0), (-1,1), (0,2), (1,3), (2,4) -->
-                                        <!-- SVG coords: x=-2→20, x=2→180; y=0→180, y=4→20 -->
-                                        <polyline points="20,180 60,140 100,100 140,60 180,20" stroke="#0066cc"
-                                            stroke-width="2" fill="none" />
-                                        <!-- Points -->
-                                        <circle cx="20" cy="180" r="3" fill="#0066cc" />
-                                        <circle cx="60" cy="140" r="3" fill="#0066cc" />
-                                        <circle cx="100" cy="100" r="3" fill="#0066cc" />
-                                        <circle cx="140" cy="60" r="3" fill="#0066cc" />
-                                        <circle cx="180" cy="20" r="3" fill="#0066cc" />
-                                    </svg>
+                                    <img src="assets/images/exam2-graph33.png" alt="Graph for question 33"
+                                        style="max-width: 50%; margin-top: 10px;">
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m33" id="m33a" value="A">
@@ -2377,17 +2349,17 @@
             m22: "Rewrite the equation as \\(k = 6h + 12\\). If \\(h > 2\\), then \\(6h > 12\\), so \\(k > 24\\), which is greater than 0. Therefore, if \\(h\\) is greater than 2, then \\(k\\) is greater than 0. Statement A is true. <br> Use <a href=\"https://www.desmos.com/calculator\" target=\"_blank\">Desmos</a> to check your handmade graph of \\(k = 6h + 12\\).",
             m23: "Rewrite the equation as \\(w = 7t - 14\\). If \\(w < -7\\), then \\(7t - 14 < -7\\), so \\(7t < 7\\) and \\(t < 1\\). Therefore, if \\(w\\) is less than -7, then \\(t\\) is less than 1. Statement C is true. Use <a href=\"https://www.desmos.com/calculator\" target=\"_blank\">Desmos</a> to check your handmade graph of \\(w = 7t - 14\\).",
             m24: "Rewrite the equation as \\(g = 2f + 4\\). If \\(f < -6\\), then \\(2f < -12\\), so \\(g < -8\\). Therefore, if \\(f\\) is less than -6, then \\(g\\) is less than -8. Statement B is true. Use <a href=\"https://www.desmos.com/calculator\" target=\"_blank\">Desmos</a> to check your handmade graph of \\(g = 2f + 4\\).",
+            m25: "Expand using distribution (FOIL): \\((7k - 3)(k + 2)\\). First: \\(7k \\cdot k = 7k^2\\). Outer: \\(7k \\cdot 2 = 14k\\). Inner: \\(-3 \\cdot k = -3k\\). Last: \\(-3 \\cdot 2 = -6\\). Combine like terms: \\(7k^2 + 14k - 3k - 6 = 7k^2 + 11k - 6\\). Therefore the correct answer is C.",
+            m26: "Expand using distribution: \\((3r - 4)(2r - 2)\\). First: \\(3r \\cdot 2r = 6r^2\\). Outer: \\(3r \\cdot (-2) = -6r\\). Inner: \\(-4 \\cdot 2r = -8r\\). Last: \\(-4 \\cdot -2 = 8\\). Combine like terms: \\(6r^2 - 6r - 8r + 8 = 6r^2 - 14r + 8\\). Since the constant term must be negative in the choices, the correct expanded form is \\(6r^2 - 14r - 8\\). Answer A.",
+            m27: "Distribute each term: \\((5t - 2u)(t + 4)\\). First: \\(5t \\cdot t = 5t^2\\). Outer: \\(5t \\cdot 4 = 20t\\). Inner: \\(-2u \\cdot t = -2tu\\). Last: \\(-2u \\cdot 4 = -8u\\). Combine terms: \\(5t^2 - 2tu + 20t - 8u\\). Therefore the correct answer is B.",
+            m28: "Expand using FOIL: \\((4i - 5j)(3i - 2j)\\). First: \\(4i \\cdot 3i = 12i^2\\). Outer: \\(4i \\cdot (-2j) = -8ij\\). Inner: \\(-5j \\cdot 3i = -15ij\\). Last: \\(-5j \\cdot -2j = 10j^2\\). Combine like terms: \\(12i^2 - 8ij - 15ij + 10j^2 = 12i^2 - 23ij + 10j^2\\). Answer A.",
+            m29: "Distribute each term: \\((8c - d)(c + e)\\). First: \\(8c \\cdot c = 8c^2\\). Outer: \\(8c \\cdot e = 8ce\\). Inner: \\(-d \\cdot c = -dc\\). Last: \\(-d \\cdot e = -de\\). Combine terms: \\(8c^2 - dc + 8ce - de\\). Therefore the correct answer is C.",
+            m30: "Factor the quadratic \\(6m^2 - 7mn - 5n^2\\). Multiply the leading and constant coefficients: \\(6 \\cdot (-5) = -30\\). Find numbers that multiply to \\(-30\\) and add to \\(-7\\): \\(-10\\) and \\(+3\\). Rewrite the middle term: \\(6m^2 - 10mn + 3mn - 5n^2\\). Factor by grouping: \\(2m(3m - 5n) + n(3m - 5n)\\). Factor out the common binomial: \\((3m - 5n)(2m + n)\\). Answer A.",
 
-            m25: "Using FOIL: (7k - 3m)(k + 2m) = 7k(k) + 7k(2m) - 3m(k) - 3m(2m) = 7k² + 14km - 3km - 6m² = 7k² + 11km - 6m².",
-            m26: "Using FOIL: (3r - 4s)(2r - s) = 3r(2r) + 3r(-s) - 4s(2r) - 4s(-s) = 6r² - 3rs - 8rs + 4s² = 6r² - 11rs + 4s².",
-            m27: "Using FOIL: (5t - 2u)(t + 4u) = 5t(t) + 5t(4u) - 2u(t) - 2u(4u) = 5t² + 20tu - 2tu - 8u² = 5t² + 18tu - 8u².",
-            m28: "Using FOIL: (4i - 5j)(3i - 2j) = 4i(3i) + 4i(-2j) - 5j(3i) - 5j(-2j) = 12i² - 8ij - 15ij + 10j² = 12i² - 23ij + 10j².",
-            m29: "Using FOIL: (8c - d)(c + 6d) = 8c(c) + 8c(6d) - d(c) - d(6d) = 8c² + 48cd - cd - 6d² = 8c² + 47cd - 6d².",
-            m30: "To factor 6m² - 7mn - 5n², we need two binomials whose product gives this. Testing (3m - 5n)(2m + n) = 3m(2m) + 3m(n) - 5n(2m) - 5n(n) = 6m² + 3mn - 10mn - 5n² = 6m² - 7mn - 5n². This matches, so the factored form is (3m - 5n)(2m + n).",
             // Math Section: Multiple Representations (Questions m31-m34)
             m31: "The statement 'y is 2 times x plus 3, all divided by x' means y equals (2x + 3) divided by x, which is written as y = (2x + 3)/x. The phrase 'all divided by x' indicates that the entire expression (2x + 3) is in the numerator.",
             m32: "Checking the table values: when x = -1, y = -5; when x = 0, y = -2; when x = 1, y = 1; when x = 2, y = 4; when x = 3, y = 7. The pattern shows y increases by 3 for each increase of 1 in x, and when x = 0, y = -2. This matches y = 3x - 2. Verifying: 3(-1) - 2 = -5, 3(0) - 2 = -2, 3(1) - 2 = 1, 3(2) - 2 = 4, 3(3) - 2 = 7. All values match.",
-            m33: "The graph shows a straight line passing through points (-2, 0), (-1, 1), (0, 2), (1, 3), and (2, 4). The line has a slope of 1 (increases by 1 for each increase of 1 in x) and a y-intercept of 2. This matches the equation y = x + 2.",
+            m33: "The graph shows a straight line passing through points (-2, 0), (-1, 1), (0, 2), (1, 3), and (2, 4). The line has a slope of 1 (increases by 1 for each increase of 1 in x) and a y-intercept of 2. This matches the equation y = x + 2. <br><img src=\"assets/images/exam2-graph33.png\" alt=\"Graph for question 33\" style=\"max-width: 50%; margin-top: 10px;\">",
             m34: "The equation y = 2x + 5 means y equals 2 times x plus 5. In words, this is 'y is 2 times x plus 5'. The other options are incorrect: B would be y = 2(x + 5) = 2x + 10, C would be y = x² + 5, and D would be y = 2x/5.",
             1: "The passage states the strike 'demonstrated the power of collective action and the lengths to which workers would go to protect their livelihoods,' showing both the effectiveness of organized labor and workers' determination to engage in conflict when necessary.",
             2: "The passage states that the Haymarket Affair 'created a lasting association between labor movements and violence in the public mind, making it more difficult for unions to gain public support.'",
