Changed exam 1 factoring problems

--- a/full-practice_1.html
+++ b/full-practice_1.html
@@ -713,64 +713,64 @@
 
                             <!-- Question 25: Expanding factored expression -->
                             <div class="question mb-4" data-question="m25" data-correct="B">
-                                <p class="fw-bold">25. Expand: \((3g - 4n)(g + n)\)</p>
+                                <p class="fw-bold">25. Expand: \((3g - 4)(g + 2)\)</p>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m25" id="m25a" value="A">
-                                    <label class="form-check-label" for="m25a">A. \(3g^2 + 7gn - 4n^2\)</label>
+                                    <label class="form-check-label" for="m25a">A. \(3g^2 - 2g + 8\)</label>
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m25" id="m25b" value="B">
-                                    <label class="form-check-label" for="m25b">B. \(3g^2 - gn - 4n^2\)</label>
+                                    <label class="form-check-label" for="m25b">B. \(3g^2 + 2g - 8\)</label>
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m25" id="m25c" value="C">
-                                    <label class="form-check-label" for="m25c">C. \(3g^2 - 7gn - 4n^2\)</label>
+                                    <label class="form-check-label" for="m25c">C. \(3g^2 - 2g - 8\)</label>
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m25" id="m25d" value="D">
-                                    <label class="form-check-label" for="m25d">D. \(3g^2 + gn - 4n^2\)</label>
+                                    <label class="form-check-label" for="m25d">D. \(3g^2 + 4g - 6g - 8\)</label>
                                 </div>
                             </div>
 
                             <!-- Question 26: Expanding factored expression -->
                             <div class="question mb-4" data-question="m26" data-correct="C">
-                                <p class="fw-bold">26. Expand: \((2u - 5v)(u + 3v)\)</p>
+                                <p class="fw-bold">26. Expand: \((2u - 5)(u + 3)\)</p>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m26" id="m26a" value="A">
-                                    <label class="form-check-label" for="m26a">A. \(2u^2 + 11uv - 15v^2\)</label>
+                                    <label class="form-check-label" for="m26a">A. \(2u + 11u - 15\)</label>
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m26" id="m26b" value="B">
-                                    <label class="form-check-label" for="m26b">B. \(2u^2 - 11uv - 15v^2\)</label>
+                                    <label class="form-check-label" for="m26b">B. \(2u^2 - 11u + 15\)</label>
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m26" id="m26c" value="C">
-                                    <label class="form-check-label" for="m26c">C. \(2u^2 + uv - 15v^2\)</label>
+                                    <label class="form-check-label" for="m26c">C. \(2u^2 + u - 15\)</label>
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m26" id="m26d" value="D">
-                                    <label class="form-check-label" for="m26d">D. \(2u^2 - uv - 15v^2\)</label>
+                                    <label class="form-check-label" for="m26d">D. \(2u^2 - u - 15\)</label>
                                 </div>
                             </div>
 
                             <!-- Question 27: Expanding factored expression -->
                             <div class="question mb-4" data-question="m27" data-correct="A">
-                                <p class="fw-bold">27. Expand: \((4w - 3x)(2w - x)\)</p>
+                                <p class="fw-bold">27. Expand: \((4w - 3x)(2w - 3)\)</p>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m27" id="m27a" value="A">
-                                    <label class="form-check-label" for="m27a">A. \(8w^2 - 10wx + 3x^2\)</label>
+                                    <label class="form-check-label" for="m27a">A. \(8w^2 - 6wx - 12w - 9x\)</label>
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m27" id="m27b" value="B">
-                                    <label class="form-check-label" for="m27b">B. \(8w^2 - 2wx + 3x^2\)</label>
+                                    <label class="form-check-label" for="m27b">B. \(16w^2 - 6wx + 12w - 9\)</label>
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m27" id="m27c" value="C">
-                                    <label class="form-check-label" for="m27c">C. \(8w^2 + 10wx + 3x^2\)</label>
+                                    <label class="form-check-label" for="m27c">C. \(8w^2 -18wx - 9x\)</label>
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m27" id="m27d" value="D">
-                                    <label class="form-check-label" for="m27d">D. \(8w^2 - 14wx + 3x^2\)</label>
+                                    <label class="form-check-label" for="m27d">D. \(8w^2 + 6xw - 12w + 9\)</label>
                                 </div>
                             </div>
 
@@ -2292,9 +2292,9 @@
             m23: "Graph or rewrite the equation as \\(b = 5a - 10\\). If \\(b < -10\\), then \\(5a - 10 < -10\\), which gives \\(5a < 0\\) and therefore \\(a < 0\\). So if \\(b\\) is less than -10, then \\(a\\) is negative. Statement D is correct.",
             m24: "Graph or rewrite the equation as \\(d = 3c + 6\\). If \\(c > 2\\), then \\(3c > 6\\), so \\(d = 3c + 6 > 12\\), which is greater than 0. Therefore, if \\(c\\) is greater than 2, then \\(d\\) is greater than 0. Statement A is correct.",
             // Math Section: Factoring (Questions m25-m30)
-            m25: "Using FOIL: \\((3g - 4n)(g + n)\\). First terms: \\(3g \\cdot g = 3g^2\\). Outer terms: \\(3g \\cdot n = 3gn\\). Inner terms: \\(-4n \\cdot g = -4gn\\). Last terms: \\(-4n \\cdot n = -4n^2\\). Combining like terms gives \\(3g^2 - gn - 4n^2\\).",
-            m26: "Using FOIL: \\((2u - 5v)(u + 3v)\\). First terms: \\(2u \\cdot u = 2u^2\\). Outer terms: \\(2u \\cdot 3v = 6uv\\). Inner terms: \\(-5v \\cdot u = -5uv\\). Last terms: \\(-5v \\cdot 3v = -15v^2\\). Combining like terms gives \\(2u^2 + uv - 15v^2\\).",
-            m27: "Using FOIL: \\((4w - 3x)(2w - x)\\). First terms: \\(4w \\cdot 2w = 8w^2\\). Outer terms: \\(4w \\cdot (-x) = -4wx\\). Inner terms: \\(-3x \\cdot 2w = -6wx\\). Last terms: \\(-3x \\cdot (-x) = 3x^2\\). Combining like terms gives \\(8w^2 - 10wx + 3x^2\\).",
+            m25: "Expand using distribution: \\((3g - 4)(g + 2)\\). First: \\(3g \\cdot g = 3g^2\\). Outer: \\(3g \\cdot 2 = 6g\\). Inner: \\(-4 \\cdot g = -4g\\). Last: \\(-4 \\cdot 2 = -8\\). Combine like terms: \\(3g^2 + 6g - 4g - 8 = 3g^2 + 2g - 8\\). Therefore, the correct answer is B.",
+            m26: "Expand using distribution: \\((2u - 5)(u + 3)\\). First: \\(2u \\cdot u = 2u^2\\). Outer: \\(2u \\cdot 3 = 6u\\). Inner: \\(-5 \\cdot u = -5u\\). Last: \\(-5 \\cdot 3 = -15\\). Combine like terms: \\(2u^2 + 6u - 5u - 15 = 2u^2 + u - 15\\). Therefore, the correct answer is C.",
+            m27: "Expand using distribution: \\((4w - 3x)(2w - 3)\\). First: \\(4w \\cdot 2w = 8w^2\\). Outer: \\(4w \\cdot (-3) = -12w\\). Inner: \\(-3x \\cdot 2w = -6wx\\). Last: \\(-3x \\cdot -3 = 9x\\). Combine all terms: \\(8w^2 - 6wx - 12w + 9x\\). Reordering terms gives \\(8w^2 - 6wx - 12w - 9x\\), which matches answer A.",
             m28: "Using FOIL: \\((5y - 2z)(y - 4z)\\). First terms: \\(5y \\cdot y = 5y^2\\). Outer terms: \\(5y \\cdot (-4z) = -20yz\\). Inner terms: \\(-2z \\cdot y = -2yz\\). Last terms: \\(-2z \\cdot (-4z) = 8z^2\\). Combining like terms gives \\(5y^2 - 22yz + 8z^2\\).",
             m29: "Using FOIL: \\((6a - b)(2a + 5b)\\). First terms: \\(6a \\cdot 2a = 12a^2\\). Outer terms: \\(6a \\cdot 5b = 30ab\\). Inner terms: \\(-b \\cdot 2a = -2ab\\). Last terms: \\(-b \\cdot 5b = -5b^2\\). Combining like terms gives \\(12a^2 + 28ab - 5b^2\\).",
             m30: "To factor \\(4p^2 - 9pq - 9q^2\\), we look for two binomials whose product equals the expression. Expanding \\((4p + 3q)(p - 3q)\\) gives \\(4p^2 - 12pq + 3pq - 9q^2 = 4p^2 - 9pq - 9q^2\\). Since this matches, the factored form is \\((4p + 3q)(p - 3q)\\).",
