--- a/full-practice_1.html
+++ b/full-practice_1.html
@@ -758,7 +758,7 @@
                                 <p class="fw-bold">27. Expand: \((4w - 3x)(2w - 3)\)</p>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m27" id="m27a" value="A">
-                                    <label class="form-check-label" for="m27a">A. \(8w^2 - 6wx - 12w - 9x\)</label>
+                                    <label class="form-check-label" for="m27a">A. \(8w^2 - 6wx - 12w + 9x\)</label>
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m27" id="m27b" value="B">
@@ -2294,7 +2294,7 @@
             // Math Section: Factoring (Questions m25-m30)
             m25: "Expand using distribution: \\((3g - 4)(g + 2)\\). First: \\(3g \\cdot g = 3g^2\\). Outer: \\(3g \\cdot 2 = 6g\\). Inner: \\(-4 \\cdot g = -4g\\). Last: \\(-4 \\cdot 2 = -8\\). Combine like terms: \\(3g^2 + 6g - 4g - 8 = 3g^2 + 2g - 8\\). Therefore, the correct answer is B.",
             m26: "Expand using distribution: \\((2u - 5)(u + 3)\\). First: \\(2u \\cdot u = 2u^2\\). Outer: \\(2u \\cdot 3 = 6u\\). Inner: \\(-5 \\cdot u = -5u\\). Last: \\(-5 \\cdot 3 = -15\\). Combine like terms: \\(2u^2 + 6u - 5u - 15 = 2u^2 + u - 15\\). Therefore, the correct answer is C.",
-            m27: "Expand using distribution: \\((4w - 3x)(2w - 3)\\). First: \\(4w \\cdot 2w = 8w^2\\). Outer: \\(4w \\cdot (-3) = -12w\\). Inner: \\(-3x \\cdot 2w = -6wx\\). Last: \\(-3x \\cdot -3 = 9x\\). Combine all terms: \\(8w^2 - 6wx - 12w + 9x\\). Reordering terms gives \\(8w^2 - 6wx - 12w - 9x\\), which matches answer A.",
+            m27: "Expand using distribution: \\((4w - 3x)(2w - 3)\\). First: \\(4w \\cdot 2w = 8w^2\\). Outer: \\(4w \\cdot (-3) = -12w\\). Inner: \\(-3x \\cdot 2w = -6wx\\). Last: \\(-3x \\cdot -3 = 9x\\). Combine all terms: \\(8w^2 - 6wx - 12w + 9x\\). Therefore, the correct answer is A.",
             m28: "Using FOIL: \\((5y - 2z)(y - 4z)\\). First terms: \\(5y \\cdot y = 5y^2\\). Outer terms: \\(5y \\cdot (-4z) = -20yz\\). Inner terms: \\(-2z \\cdot y = -2yz\\). Last terms: \\(-2z \\cdot (-4z) = 8z^2\\). Combining like terms gives \\(5y^2 - 22yz + 8z^2\\).",
             m29: "Using FOIL: \\((6a - b)(2a + 5b)\\). First terms: \\(6a \\cdot 2a = 12a^2\\). Outer terms: \\(6a \\cdot 5b = 30ab\\). Inner terms: \\(-b \\cdot 2a = -2ab\\). Last terms: \\(-b \\cdot 5b = -5b^2\\). Combining like terms gives \\(12a^2 + 28ab - 5b^2\\).",
             m30: "To factor \\(4p^2 - 9pq - 9q^2\\), we look for two binomials whose product equals the expression. Expanding \\((4p + 3q)(p - 3q)\\) gives \\(4p^2 - 12pq + 3pq - 9q^2 = 4p^2 - 9pq - 9q^2\\). Since this matches, the factored form is \\((4p + 3q)(p - 3q)\\).",
